# linera-protocol

./: .gitignore  CLI.md  Cargo.toml  benchmark_results.json  benchmark_results.md
docker/: Dockerfile  compose.sh
examples/: Cargo.toml
examples/concurrent-lurk/: Cargo.toml  README.md  README_new.md  TEST.md  ping-pong-test.lurk  ping-pong.lurk  run_e2e.sh
examples/concurrent-lurk/src/: contract.rs  lib.rs  service.rs  state.rs
examples/crowd-funding/: Cargo.toml  README.md
examples/crowd-funding/src/: contract.rs  state.rs
examples/lurk-microchain/: Cargo.toml  README.md
examples/lurk-microchain/src/: contract.rs  lib.rs  service.rs  state.rs
linera-base/src/: data_types.rs  identifiers.rs
linera-chain/src/unit_tests/: chain_tests.rs
linera-client/src/: client_options.rs
linera-core/src/: client.rs  worker.rs
linera-core/src/client/: mod.rs
linera-execution/: Cargo.toml
linera-execution/src/: execution.rs  execution_state_actor.rs  lib.rs  runtime.rs  system.rs
linera-execution/src/test_utils/: system_execution_state.rs
linera-execution/src/unit_tests/: system_tests.rs
linera-execution/src/wasm/: runtime_api.rs
linera-execution/tests/: contract_runtime_apis.rs
linera-rpc/src/: config.rs
linera-rpc/src/grpc/: client.rs
linera-sdk/src/contract/: conversions_from_wit.rs  conversions_to_wit.rs  (+2 more)
linera-sdk/wit/: contract-runtime-api.wit
linera-service-graphql-client/gql/: service_schema.graphql
linera-service-graphql-client/src/: service.rs
linera-service/src/: linera.rs  node_service.rs
linera-service/tests/: end_to_end_tests.rs
(+7 files in other folders)
