[package]
name = "lurk-microchain"
version = "0.1.0"
authors = ["Lurk Lab Systems <winston@lurk-lab.com>"] # TODO UPDATE EMAIL
edition = "2021"

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true
log.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }
serde_json.workspace = true
test-log.workspace = true

[[bin]]
name = "lurk_microchain_contract"
path = "src/contract.rs"

[[bin]]
name = "lurk_microchain_service"
path = "src/service.rs"
